# FinLang

./: .gitignore  Cargo.toml  README.md
benches/: BENCHMARKS.md  portfolio_bench.rs
crates/finlang-cli/: Cargo.toml
crates/finlang-cli/src/: compile.rs  diag.rs  main.rs  pipeline.rs  repl.rs  run.rs
crates/finlang-cli/tests/: cli.rs  numerics.rs
crates/finlang-codegen/: Cargo.toml
crates/finlang-codegen/src/: aot.rs  common.rs  jit.rs  lib.rs  translate.rs
crates/finlang-codegen/tests/: aot_emits_object.rs  jit_arithmetic.rs  jit_stdlib.rs  type_map.rs
crates/finlang-codegen/tests/common/: mod.rs
crates/finlang-ir/: Cargo.toml
crates/finlang-ir/src/: error.rs  ir.rs  lib.rs  lower.rs  print.rs  validate.rs
crates/finlang-ir/src/opt/: const_fold.rs  dce.rs  mod.rs
crates/finlang-ir/tests/: const_fold.rs  dce.rs  lower_examples.rs  validate.rs
crates/finlang-ir/tests/snapshots/: lower_examples__bond_portfolio_after_dce.snap  lower_examples__bond_portfolio_before.snap  lower_examples__option_pricing_after_dce.snap  lower_examples__var_calculation_after_dce.snap  lower_examples__var_calculation_before.snap
crates/finlang-lexer/: Cargo.toml
crates/finlang-lexer/src/: lib.rs
crates/finlang-lexer/tests/: fuzz_smoke.rs  snapshot.rs  tokens.rs
crates/finlang-lexer/tests/snapshots/: snapshot__bond_portfolio_tokens.snap  snapshot__option_pricing_tokens.snap  snapshot__var_calculation_tokens.snap
crates/finlang-lsp/: Cargo.toml
crates/finlang-lsp/src/: analyze.rs  complete.rs  convert.rs  document.rs  goto_def.rs  hover.rs  lib.rs  main.rs
crates/finlang-lsp/tests/: basic.rs
crates/finlang-parser/: Cargo.toml
crates/finlang-parser/src/: ast.rs  error.rs  lib.rs
crates/finlang-parser/tests/: error_recovery.rs  error_render.rs  precedence.rs  smoke.rs  snapshot.rs
crates/finlang-parser/tests/snapshots/: error_render__snapshot_unexpected_token_render.snap  snapshot__bond_portfolio_items.snap  snapshot__option_pricing_items.snap  snapshot__var_calculation_items.snap
crates/finlang-stdlib/: Cargo.toml
crates/finlang-stdlib/src/: abi.rs  bonds.rs  lib.rs  normal.rs  options.rs  rates.rs
crates/finlang-stdlib/tests/: abi.rs  black_scholes.rs  bonds.rs  implied_vol.rs
crates/finlang-types/: Cargo.toml
crates/finlang-types/src/: check.rs  error.rs  lib.rs  rules.rs  stdlib_sigs.rs  ty.rs
crates/finlang-types/tests/: casts.rs  dimensions.rs  error_render.rs  examples.rs  scoping.rs  stdlib_calls.rs
crates/finlang-types/tests/snapshots/: error_render__render_add_two_dates.snap  error_render__render_mul_two_prices.snap  error_render__render_price_plus_rate.snap  error_render__render_wrong_arity.snap  error_render__render_wrong_stdlib_arg.snap  examples__bond_portfolio_errors.snap  examples__option_pricing_expr_types_sorted.snap
editor/vscode/: language-configuration.json  package-lock.json  package.json
editor/vscode/src/: extension.ts
editor/vscode/syntaxes/: finlang.tmLanguage.json
examples/: bond_portfolio.fin  demo.fin  option_pricing.fin  var_calculation.fin
