[workspace]
resolver = "2"
members = [
    "crates/finlang-lexer",
    "crates/finlang-parser",
    "crates/finlang-types",
    "crates/finlang-ir",
    "crates/finlang-codegen",
    "crates/finlang-stdlib",
    "crates/finlang-lsp",
    "crates/finlang-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["FinLang Contributors"]
repository = "https://github.com/finlang/finlang"
description = "A statically-typed compiled DSL for financial risk expressions"

[workspace.dependencies]
# Internal crates — referenced as path deps so the workspace builds standalone.
finlang-lexer    = { path = "crates/finlang-lexer",    version = "0.1.0" }
finlang-parser   = { path = "crates/finlang-parser",   version = "0.1.0" }
finlang-types    = { path = "crates/finlang-types",    version = "0.1.0" }
finlang-ir       = { path = "crates/finlang-ir",       version = "0.1.0" }
finlang-codegen  = { path = "crates/finlang-codegen",  version = "0.1.0" }
finlang-stdlib   = { path = "crates/finlang-stdlib",   version = "0.1.0" }
finlang-lsp      = { path = "crates/finlang-lsp",      version = "0.1.0" }

# Third-party. Pinned to compatible majors so all crates resolve to a single version.
logos                = "0.13"
codespan-reporting   = "0.11"
insta                = { version = "1.34", features = ["yaml"] }
thiserror            = "1"
anyhow               = "1"
libm                 = "0.2"
clap                 = { version = "4", features = ["derive"] }
rustyline            = "13"
colored              = "2"
tower-lsp            = "0.20"
tokio                = { version = "1", features = ["full"] }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
dashmap              = "5"
ropey                = "1"

# Cranelift — entire family must move in lockstep. 0.111 = wasmtime 26 stable family.
cranelift-codegen    = "0.111"
cranelift-frontend   = "0.111"
cranelift-jit        = "0.111"
cranelift-module     = "0.111"
cranelift-object     = "0.111"
cranelift-native     = "0.111"
target-lexicon       = "0.12"

# Benches
criterion            = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = true
