[package]
name = "finlang-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SSA intermediate representation + optimisation passes for FinLang"

[lib]
path = "src/lib.rs"

[dependencies]
finlang-lexer  = { workspace = true }
finlang-parser = { workspace = true }
finlang-types  = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
