[package]
name = "finlang-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Type system with financial-dimension analysis for FinLang"

[lib]
path = "src/lib.rs"

[dependencies]
finlang-lexer      = { workspace = true }
finlang-parser     = { workspace = true }
codespan-reporting = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
